# hardcore-logic

./: .gitignore  README.md  evaluate.py  prepare.py  pyproject.toml
config/: api.json
config/data/: baseline-sample.csv  baseline.csv  hardcore-sample.csv  hardcore.csv  unsolvable-sample.csv  unsolvable.csv
data/: README.md
prepare/: README.md
prepare/src/: README.md
prepare/src/binario/: main.py
prepare/src/crypto/: main.py
prepare/src/hanoi/: Hanoi.py  main.py
prepare/src/hitori/: gen-cmp.py  (+1 more)
src/: args.py  common.py  llm.py  main.py  utils.py
src/evaluator/: __init__.py  base.py  binario.py  crypto.py  hanoi.py  hitori.py  kakurasu.py  minesweeper.py  navigation.py  skyscraper.py  sudoku.py  utils.py  zebra.py
src/llm_client/: __init__.py  base.py  common.py  gemini.py  openai_legacy.py  openai_legacy_stream.py  openai_std.py  openai_stream.py  openai_vllm.py
src/model/: __init__.py  base.py  claude.py  deepseek_r1.py  deepseek_v31.py  gemini.py  glm45.py  gpt_oss.py  gpt_think.py  kimi_k2.py  minimax_m1.py  qwen3.py  qwen3_think.py  utils.py
src/task/: __init__.py  base.py  binario.py  common.py  crypto.py  hanoi.py  hitori.py  kakurasu.py  minesweeper.py  navigation.py  skyscraper.py  sudoku.py  utils.py  zebra.py
stat/: closed.ipynb  common.py  example.ipynb  open.ipynb
stat/group/: example.txt
stat/models/: closed.txt  open.txt
template/: binario.md.jinja2  crypto.md.jinja2  hanoi.md.jinja2  hitori.md.jinja2  kakurasu.md.jinja2  minesweeper.md.jinja2  navigation.md.jinja2  skyscraper.md.jinja2  sudoku.md.jinja2  zebra.md.jinja2
(+42 files in other folders)
