[project]
name = "hardcore-logic"
version = "0.1.0"
description = "Hardcore Logic Benchmark"
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "datasets>=3.6.0",
    "google-genai>=1.36.0",
    "jinja2>=3.1.6",
    "jsonref>=1.1.0",
    "openai>=1.82.0",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "nbformat>=5.10.4",
    "pandas-stubs>=2.2.3.250308",
]

[tool.uv]
cache-dir = "../.uv_cache"
